package com.keanu.software.seven.work2;

/**
 * <p>
 *
 * </p>
 *
 * @author <a href="https://github.com/Li-Keanu">keanu</a>
 * @since 2024/12/3 11:07
 */
public interface DiscountStrategy {
    double calculateDiscount(double originalPrice);
}
