package com.keanu.software.seven.work2;

/**
 * <p>
 *
 * </p>
 *
 * @author <a href="https://github.com/Li-Keanu">keanu</a>
 * @since 2024/12/3 11:11
 */
public class StandardRoom extends HotelRoom {
    public StandardRoom(DiscountStrategy discountStrategy) {
        super(discountStrategy);
    }
}
